# django-spectator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  tests.yml
devproject/: .python-version  Pipfile  db.sqlite3 copy  db_before_polymorphic.sqlite3  manage.py  requirements.txt
devproject/devproject/: settings.py  urls.py  wsgi.py
spectator/: __init__.py  admin.py  apps.py  factories.py  fields.py  managers.py  signals.py  urls.py  utils.py  views.py
spectator/admin/: __init__.py  core.py  events.py  reading.py
spectator/core/: __init__.py  admin.py  app_settings.py  apps.py  factories.py  fields.py  imagegenerators.py  managers.py  models.py  paginator.py  sitemaps.py  urls.py  utils.py  views.py
spectator/core/migrations/: 0001_initial.py  0002_creator_slug.py  0003_set_creator_slug.py  0004_auto_20180102_0959.py
spectator/core/templates/core/: base.html  creator_detail.html  creator_list.html  home.html
spectator/core/templates/spectator_core/: base.html  (+3 more)
spectator/core/templatetags/: spectator_core.py
spectator/core/urls/: __init__.py  core.py  creators.py
spectator/events/: __init__.py  admin.py  app_settings.py  apps.py  factories.py  managers.py  models.py  signals.py  sitemaps.py  urls.py  views.py
spectator/events/migrations/: 0001_initial.py  0002_auto_20170410_1233.py  0002_event_slug.py  0003_auto_20170411_0651.py  0003_auto_20171101_1645.py  0004_auto_20170411_1039.py  0004_venue_slug.py  0005_auto_20170411_1315.py  0005_auto_20180102_0959.py  0006_auto_20170413_1722.py  0006_event_slug_20180102_1127.py  0007_auto_20170413_1722.py  0007_work_slug_20180102_1137.py  0008_venue_slug_20180102_1147.py  0009_event_note.py  0010_auto_20180118_0906.py  0011_auto_20180125_1348.py  0012_add_classical_and_dance_through_models.py  0013_copy_classical_and_dance_data.py  0014_remove_old_classical_dance.py  0015_rename_classical_dance_on_event.py  0016_add_movies_plays_m2ms_on_event.py  0017_copy_movies_and_plays_data.py  0018_remove_old_movie_play_fields.py  0019_auto_20180127_1653.py  0020_venue_note.py  0021_auto_20180129_1735.py  0022_auto_20180129_1752.py  0023_venue_cinema_treasures_id.py  0024_event_venue_name.py  0025_auto_20180131_1755.py  0026_auto_20180208_1126.py  0027_classicalworks_to_works.py  0028_dancepieces_to_works.py  0029_plays_to_works.py  0030_movies_to_works.py  0031_auto_20180208_1412.py  0032_recreate_work_slugs.py  0033_auto_20180208_1613.py  0034_auto_20180208_1618.py  (+11 more)
spectator/events/templatetags/: spectator_events.py
spectator/migrations/: 0001_initial.py  0002_auto_20170228_1541.py  0002_auto_20170303_1614.py  0003_auto_20170228_1636.py  0003_remove_event_title.py  0004_auto_20170301_0906.py  0004_auto_20170304_1240.py  0005_auto_20170302_0949.py  0005_auto_20170304_1534.py  0006_auto_20170302_1026.py  0006_auto_20170307_1625.py  0007_auto_20170302_1116.py  0007_auto_20170309_1715.py  0008_auto_20170302_1137.py  0008_auto_20170309_1722.py  0009_auto_20170302_1341.py  0009_auto_20170314_1808.py  0010_auto_20170302_1343.py  0010_auto_20170314_1915.py  0011_auto_20170302_1519.py  0011_auto_20170320_1717.py  0012_auto_20170302_1717.py  0012_auto_20170320_1729.py  0013_auto_20170320_1730.py  0013_remove_playproductionrole_play.py  0014_auto_20170321_1728.py  0015_auto_20170321_1734.py  0016_auto_20170323_1818.py
spectator/models/: __init__.py  books.py  core.py  events.py  reading.py
spectator/reading/: __init__.py  admin.py  app_settings.py  apps.py  factories.py  managers.py  models.py  sitemaps.py  urls.py  utils.py  views.py
spectator/reading/migrations/: 0001_initial.py  0002_publicationseries_slug.py  0003_publication_slug.py  0004_slugs_20180102_1153.py  0005_auto_20180125_1348.py  0006_publication_cover.py  0007_rename_cover_to_thumbnail.py  0008_change_thumbnail_upload_to_function.py
spectator/reading/templatetags/: spectator_reading.py
spectator/static/js/: venue_map.js
spectator/templates/spectator/: base.html  base_events.html  base_reading.html  concert_detail.html  concert_list.html  creator_detail.html  creator_list.html  event_archive_year.html  event_list.html  events_home.html  home.html  miscevent_detail.html  miscevent_list.html  movie_detail.html  movie_list.html  play_detail.html  play_list.html  publication_detail.html  publication_list.html  publicationseries_detail.html  publicationseries_list.html  reading_archive_year.html  reading_home.html  venue_detail.html  venue_list.html
spectator/templatetags/: spectator_filters.py  spectator_tags.py
spectator/urls/: __init__.py  core.py  events.py  reading.py
spectator/views/: __init__.py  core.py  events.py  reading.py
src/spectator/: __init__.py
src/spectator/core/: __init__.py  admin.py  app_settings.py  apps.py  fields.py  imagegenerators.py  models.py  sitemaps.py  utils.py
src/spectator/events/: __init__.py  managers.py  models.py  signals.py  sitemaps.py  urls.py
src/spectator/reading/: __init__.py  admin.py  apps.py  urls.py
tests/: __init__.py  settings.py  test_admin.py  test_admins.py  test_managers.py  test_models.py  test_models_core.py  test_models_events.py  test_models_reading.py  test_paginator.py  test_pending_migrations.py  test_settings.py  test_templatefilters.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py  urls.py
tests/core/: test_admin.py  test_apps.py  test_managers.py  test_models.py  test_paginator.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py
tests/core/fields/: models.py  tests.py
tests/events/: test_admin.py  test_managers.py  test_models.py  test_templatetags.py  test_urls.py  test_views.py
tests/fields/: models.py  tests.py
tests/models/: test_core.py  test_events.py  test_reading.py
tests/reading/: test_admin.py  test_managers.py  test_models.py  test_templatetags.py  test_urls.py  test_utils.py  test_views.py
tests/views/: test_core.py  test_events.py  test_reading.py
(+247 files in other folders)
